[package]
name = "last-fm-rs"
version = "20251214.0.0"
edition = "2021"
authors = ["Jake Goldsborough <github@pancakes.email>"]
description = "Last.fm API client library for Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ducks/last-fm-rs"
homepage = "https://github.com/ducks/last-fm-rs"
readme = "README.md"
keywords = ["lastfm", "api", "music", "scrobble"]
categories = ["api-bindings", "web-programming"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
md5 = "0.7"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
url = "2.5"
